# type-aligned

./: .gitignore  ChangeLog  Setup.hs  type-aligned.cabal
.github/workflows/: ci.yml
Data/: TASequence.hs
Data/TASequence/: Any.hs  BinaryTree.hs  CatQueue.hs  Class.hs  ConsList.hs  FastCatQueue.hs  FastQueue.hs  FingerTree.hs  Queue.hs  SnocList.hs  ToCatQueue.hs
