Name:                type-aligned
Version:             0.9.6
Synopsis:	         Various type-aligned sequence data structures.
Description:         Various data structures for type aligned sequences: heterogeneous sequences where the types enforce the element order.
License:             BSD3
License-file:        LICENSE
Author:              Atze van der Ploeg
Maintainer:          atzeus@gmail.com
Homepage:            https://github.com/atzeus/type-aligned
Build-Type:          Simple
Cabal-Version:       2.0
Data-files:          ChangeLog
Category:            Data, Data Structures
Tested-With:         GHC ==7.4.2 GHC ==7.6.3 GHC ==7.8.4 GHC ==7.10.3 GHC ==8.0.2 GHC ==8.2.2 GHC ==8.4.4 GHC ==8.6.5 GHC ==8.8.4 GHC ==8.10.4

Library
  Default-Language: Haskell2010
  Build-Depends: base >= 2 && <= 6
  Exposed-modules:
      Data.TASequence.BinaryTree
    , Data.TASequence
    , Data.TASequence.ConsList
    , Data.TASequence.FastCatQueue
    , Data.TASequence.FastQueue
    , Data.TASequence.FingerTree
    , Data.TASequence.Queue
    , Data.TASequence.SnocList
    , Data.TASequence.ToCatQueue
  Other-modules: Data.TASequence.Any

  Other-Extensions: GADTs, ViewPatterns, TypeOperators, RankNTypes, PolyKinds


test-suite type-aligned-test
  if impl(ghc < 7.10)
    buildable: False
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  main-is:          Test.hs
  build-depends:    base >=4.5 && < 5
                  , type-aligned
                  , tasty >= 1.4
                  , QuickCheck
                  , tasty-quickcheck

test-suite do-nothing
  if impl(ghc >= 7.10)
    buildable: False
  type:             exitcode-stdio-1.0
  hs-source-dirs:   fake-test
  default-language: Haskell2010
  main-is:          Test.hs
  build-depends:    base >=4.5 && < 5



source-repository head
    type:     git
    location:  https://github.com/atzeus/type-aligned
